# troll

./: CMakeLists.txt  main.cpp
src/: File.h  FileContent.h  Line.h
ui/: ColorString.h  CommandBar.cpp  CommandBar.h  CppHighlighter.h  FileView.h  InputController.h  TabManager.cpp  TabManager.h
